Update and use NuxeoAWSCredentialsProvider